update spaces in about

--- a/layouts/partials/preview_list.html
+++ b/layouts/partials/preview_list.html
@@ -14,6 +14,10 @@
     {{ partial "preview_post.html" . }}
   {{ end }}
 
+  {{ if or (eq .Type "projects") (eq .Type "project") }}
+    {{ partial "preview_project.html" . }}
+  {{ end }}
+
 {{ end }}
 
 {{ partial "pagination.html" . }}
