--- a/layouts/partials/css/main.css
+++ b/layouts/partials/css/main.css
@@ -713,6 +713,12 @@ kbd {
   white-space: nowrap;
 }
 
+.title-5 {
+  font-size: 2.5rem;
+  font-weight: 300;
+  line-height: 1.2;
+}
+
 /* Fonts */
 
 {{ if not .Site.Params.disablefancyfonts  }}
